--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "gowithplanb/flarum-de",
+    "name": "gowithplanb/flarum-nl",
     "type": "flarum-extension",
     "description": "Dutch language pack for Flarum and its bundled extensions.",
     "homepage": "http://flarum.org/",
