--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         },
         "flarum-locale": {
             "code": "nl",
-            "title": "Dutch"
+            "title": "Nederlands"
         }
     }
 }
